	PR fortran/24493 	* scanner.c (skip_free_comments): Set at_bol at the beginning of the 	loop, not before it. 	(skip_fixed_comments): Handle ! comments in the middle of line here 	as well. 	(gfc_skip_comments): Use skip_fixed_comments for FIXED_FORM even if 	not at BOL. 	(gfc_next_char_literal): Fix expected canonicalized *$omp string.

* gfortran.dg/gomp/fixed-1.f: New test.
	* gfortran.dg/gomp/free-1.f: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gomp-20050608-branch@105843 138bc75d-0d04-0410-961f-82ee72b054a4